# pixo_gem

./: .gitignore  .gitmodules  .ruby-gemset  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  pixo.gemspec
exe/: pixo
ext/: CMakeLists.txt  gem.cpp
ext/libpixgem/: extconf.rb
ext/libpixgem/src/: application.cpp  application.hpp  camera.cpp  camera.hpp  fade_candy.cpp  fade_candy.hpp  gem.cpp  holder.cpp  holder.hpp  pattern.cpp  pattern.hpp
ext/pixo_native/: extconf.rb  gem.c
ext/pixo_native/src/: application.cpp  gem.cpp  pattern.hpp
lib/: pixo.rb
lib/pixo/: application.rb  renderer.rb  version.rb
lib/pixo/ipc/: service.rb
lib/pixo/rpc/: application_service.rb  request_types.rb  service.rb
native/pixo/: extconf.rb
spec/: pixo_spec.rb  renderer_spec.rb  spec_helper.rb
spec/ipc/: service_spec.rb
